--- a/asciidocs/index.adoc
+++ b/asciidocs/index.adoc
@@ -24,6 +24,11 @@ endif::backend-html5[]
 // print the toc here (not at the default position)
 toc::[]
 
+== Resources Jetpack Compose
+
+* https://foso.github.io/Jetpack-Compose-Playground/[Jetpack Compose Playground^]
+* https://www.jetpackcompose.net/[Jetpack Compose Tutorial von Ranjith Kumar]
+
 == Prerequisites - What students have to prepare
 
 . Download JetBrains Toolbox: https://www.jetbrains.com/lp/toolbox/
@@ -105,9 +110,12 @@ TIP: By convention, the modifier is specified as the first optional parameter of
 
 === Scaffold
 
+* A *Scaffold* is a layout which implements the basic material design layout structure. You can add things like a TopBar, BottomBar, FAB or a Drawer.
+
+* With the *scaffoldState* you can set the opening state of the drawer(DrawerState.Opened or DrawerState.Closed)
 
 
-
+* https://foso.github.io/Jetpack-Compose-Playground/material/scaffold/[Scaffold on Jetpack Compose Playground^]
 
 
 
@@ -469,31 +477,109 @@ A side-effect in Compose is a change to the state of the app that happens outsid
 .home/LandingScreen.kt file
 [source,kotlin]
 ----
-import androidx.compose.runtime.LaunchedEffect
-import kotlinx.coroutines.delay
+import androidx.compose.runtime.getValue
+import androidx.compose.runtime.rememberUpdatedState
 
 @Composable
 fun LandingScreen(modifier: Modifier = Modifier, onTimeout: () -> Unit) {
     Box(modifier = modifier.fillMaxSize(), contentAlignment = Alignment.Center) {
-        // Start a side effect to load things in the background
-        // and call onTimeout() when finished.
-        // Passing onTimeout as a parameter to LaunchedEffect
-        // is wrong! Don't do this. We'll improve this code in a sec.
-        LaunchedEffect(onTimeout) {
-            delay(SplashWaitTime) // Simulates loading things
-            onTimeout()
+        // This will always refer to the latest onTimeout function that
+        // LandingScreen was recomposed with
+        val currentOnTimeout by rememberUpdatedState(onTimeout)
+
+        // Create an effect that matches the lifecycle of LandingScreen.
+        // If LandingScreen recomposes or onTimeout changes,
+        // the delay shouldn't start again.
+        LaunchedEffect(true) {
+            delay(SplashWaitTime)
+            currentOnTimeout()
         }
+
         Image(painterResource(id = R.drawable.ic_crane_drawer), contentDescription = null)
     }
 }
 ----
 
+.Showing the landing screen
+[source,kotlin]
+----
+// home/MainActivity.kt file
 
+import androidx.compose.runtime.getValue
+import androidx.compose.runtime.mutableStateOf
+import androidx.compose.runtime.remember
+import androidx.compose.runtime.setValue
 
+@Composable
+private fun MainScreen(onExploreItemClicked: OnExploreItemClicked) {
+    Surface(color = MaterialTheme.colors.primary) {
+        var showLandingScreen by remember { mutableStateOf(true) }
+        if (showLandingScreen) {
+            LandingScreen(onTimeout = { showLandingScreen = false })
+        } else {
+            CraneHome(onExploreItemClicked = onExploreItemClicked)
+        }
+    }
+}
+----
 
+=== rememberCoroutineScope
 
+* Manche Compose APIs sind suspend functions. ZB zum Öffnen des navigation drawers
 
+* Grund dafür: Das Öffnen des Drawers benötigt Zeit, Bewegung und vielleicht auch Animationen. Die Suspend-Function unterbricht die Ausführung der Coroutine an der Stelle wovon sie aufgerufen wird. Nach Fertigstellung der Coroutine wird die Ausführung fortgesetzt.
 
+* scaffoldState.drawerState.open() must be called within a coroutine. What can we do? openDrawer is a simple callback function, therefore:
+
+** We cannot simply call suspend functions in it because openDrawer is not executed in the context of a coroutine.
+** We cannot use LaunchedEffect as before because we cannot call composables in openDrawer. We're not in the Composition.
+
+* We want to be able to launch a coroutine which scope should we use? Ideally, we'd want a CoroutineScope that follows the lifecycle of its call-site. To do this, use the *rememberCoroutineScope* API. The scope will be automatically cancelled once it leaves the Composition. With that scope, you can start coroutines when you're not in the Composition, for example, in the openDrawer callback.
+
+[source,kotlin]
+----
+// home/CraneHome.kt file
+
+import androidx.compose.runtime.rememberCoroutineScope
+import kotlinx.coroutines.launch
+
+@Composable
+fun CraneHome(
+    onExploreItemClicked: OnExploreItemClicked,
+    modifier: Modifier = Modifier,
+) {
+    val scaffoldState = rememberScaffoldState()
+    Scaffold(
+        scaffoldState = scaffoldState,
+        modifier = Modifier.statusBarsPadding(),
+        drawerContent = {
+            CraneDrawer()
+        }
+    ) {
+        val scope = rememberCoroutineScope()  // <.>
+        CraneHomeContent(
+            modifier = modifier,
+            onExploreItemClicked = onExploreItemClicked,
+            openDrawer = {
+                scope.launch {
+                    scaffoldState.drawerState.open() // <.>
+                }
+            }
+        )
+    }
+}
+----
+
+<.> Deklaration des Scopes
+<.> öffnen des Drawers im coroutineScope
+
+==== LaunchedEffect vs rememberCoroutineScope
+
+* https://developer.android.com/jetpack/compose/side-effects#launchedeffect[LaunchedEffect: run suspend functions in the scope of a composable^]
+
+* https://developer.android.com/jetpack/compose/side-effects#remembercoroutinescope[rememberCoroutineScope: obtain a composition-aware scope to launch a coroutine outside a composable^]
+
+IMPORTANT: Using LaunchedEffect in this case wasn't possible because we needed to trigger the call to create a coroutine in a regular callback that was outside of the Composition.
 
 
 
